# Plasmata

./: .gitignore  ARCHITECTURE_ISSUE.md  BUILD.md  CMakeLists.txt  FINAL_CHECK.md  Makefile  README.md  STATUS.md  TROUBLESHOOTING.md  check_plugin.sh  install.sh  launch_rack.sh  manifest.json  plugin.cpp  plugin.hpp  plugin.json  test_load  test_load.cpp
Rack-SDK/: LICENSE-dist.html
plugin.dylib.dSYM/Contents/: Info.plist
src/: Plasmata.cpp  Plasmata.hpp  PlasmataWidget.cpp  PlasmataWidget.hpp
test_init.dylib.dSYM/Contents/: Info.plist
test_plugin.dylib.dSYM/Contents/: Info.plist
